Adapt to spring-boot-3